update app to load geojson via ajax

--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,10 @@
     </style>
   </head>
   <body>
-    <div id="app"></div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-dom.js"></script>
+    <div id="app">
+      <!-- our React app will live in here -->
+    </div>
+
     <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 
     <!-- build:js -->
