tweak Map and Filter to be more React-ish

--- a/src/index.html
+++ b/src/index.html
@@ -31,9 +31,14 @@
       }
       .filterSubwayLines hr {
         border: 1px solid #000;
+        margin: 5px;
       }
       .filterSubwayLines h3 {
         margin-top: 0;
+        padding-left: 5px;
+      }
+      .filterSubwayLines p {
+        padding-left: 5px;
       }
       .filterSubwayLines select {
         display: block;
